// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> <Heading.h1 /> renders correctly 1`] = `
.c0 {
  margin: 0;
  margin-bottom: 0.5rem;
  font-size: 2.25rem;
  font-weight: 600;
  line-height: 1.35;
}

<Clean.h1
  className="c0"
  textStyle="h1"
>
  Hello world
</Clean.h1>
`;

exports[`<Heading /> <Heading.h2 /> renders correctly 1`] = `
.c0 {
  margin: 0;
  margin-bottom: 0.5rem;
  font-size: 1.625rem;
  font-weight: 600;
  line-height: 1.35;
}

<Clean.h2
  className="c0"
  textStyle="h2"
>
  Hello world
</Clean.h2>
`;

exports[`<Heading /> <Heading.h3 /> renders correctly 1`] = `
.c0 {
  margin: 0;
  margin-bottom: 0.5rem;
  font-size: 1.375rem;
  font-weight: 600;
  line-height: 1.5;
}

<Clean.h3
  className="c0"
  textStyle="h3"
>
  Hello world
</Clean.h3>
`;

exports[`<Heading /> <Heading.h4 /> renders correctly 1`] = `
.c0 {
  margin: 0;
  margin-bottom: 0.5rem;
  font-size: 1.125rem;
  font-weight: 600;
  line-height: 1.5;
}

<Clean.h4
  className="c0"
  textStyle="h4"
>
  Hello world
</Clean.h4>
`;

exports[`<Heading /> <Heading.h5 /> renders correctly 1`] = `
.c0 {
  margin: 0;
  margin-bottom: 0.5rem;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
}

<Clean.h5
  className="c0"
  textStyle="h5"
>
  Hello world
</Clean.h5>
`;

exports[`<Heading /> <Heading.h6 /> renders correctly 1`] = `
.c0 {
  margin: 0;
  margin-bottom: 0.5rem;
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.5;
}

<Clean.h6
  className="c0"
  textStyle="h6"
>
  Hello world
</Clean.h6>
`;

exports[`<Heading /> renders correctly 1`] = `
.c0 {
  margin: 0;
  margin-bottom: 0.5rem;
  font-size: 1.375rem;
  font-weight: 600;
  line-height: 1.5;
}

<Clean.span
  className="c0"
  textStyle="h3"
>
  Hello world
</Clean.span>
`;
